# AnimalRescueKharkiv_backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.MD  README.md  compose.yaml  pyproject.toml
.github/workflows/: deploy-dev.yml  deploy-uat.yml  ping-ark-dev.yml  ping-ark.yml  start-ark.yml  stop-ark.yml
app/: init_manager.py  init_model.py  main.py  utils.py
app/init_data/: animal_types.json  locations.json  permissions.json  roles.json  users.json
app/migrations/: env.py
app/migrations/versions/: 061815f98d14_role_model_created.py  084d0c67190a_constraint_for_editiing_locks.py  1420108466c8_title_field_added_to_role_and_.py  192e48154f51_increase_token_length.py  1eb851aff8d0_animal_models_created.py  1ed674b90a85_init_data_hash_storage.py  2405fe62f291_editing_lock_model_created.py  2741cc423102_merging_security_token_and_title_field_.py  28dca6fafab6_crm_location_names_made_unique.py  2aa494874702_user_model_created.py  844c46eae7dc_animaltype_and_location_id_changed_to_.py  8ea9f08d9419_increase_media_content_type_and_ext_.py  a127cc5ca963_length_of_some_string_fields_updated.py  a403bb637750_add_indexes_to_foreign_keys.py  b259760c5c8e_added_blob_and_mediaasset_models.py  b42be1d3cdba_title_field_added_to_role_and_.py  b50b11a78a92_user_model_updated.py  b50b48197860_set_null_on_delete_for_created_by_id_.py  b7421e52f40b_permission_model_changed.py  c8d5da9b3031_update_user_lazy_loads_relationships_.py  ca19d3f7428c_init.py  d5c849d6bd92_made_all_datetime_fields_timezone_.py  d8a7d9555940_roles_to_permissions_relation_created.py  e71354e4b787_added_created_date_to_user_model.py  e921fab861be_added_permission_model.py  eab61bf2f5b6_security_token_model_created.py
app/src/: base_schemas.py  scheduler.py  singleton.py
app/src/animal_card/: models.py
app/src/auth/: extensions.py  managers.py  models.py  routes.py  schemas.py  service.py
app/src/authorization/: service.py
app/src/configuration/: db.py  redis.py  settings.py
app/src/crm/: managers.py  models.py  repository.py  routes.py  schemas.py  strategies.py
app/src/crm/stats/: repository.py  routes.py  schemas.py
app/src/exceptions/: exceptions.py
app/src/media/: cache.py  models.py  repository.py  routes.py  schemas.py
app/src/permissions/: models.py  repository.py  routes.py  schemas.py
app/src/roles/: models.py  repository.py  routes.py  schemas.py
app/src/services/: cache.py  email.py
app/src/services/templates/: invitation_email_EN.html  invitation_email_UA.html  pass_changed_email_EN.html  pass_changed_email_UA.html  reset_pass_email_EN.html  reset_pass_email_UA.html  welcome_email_EN.html  welcome_email_UA.html
app/src/stats/: routes.py
app/src/users/: models.py  repository.py  routes.py  schemas.py
devops/: aws.sh
static/: custom.js
templates/: custom_swagger_ui.html
