[tool.poetry]
name = "animal-rescue-kharkiv"
version = "1.0.0"
description = ""
authors = ["Yuliia Chorna", "Mykhailo Rozhkov", "Paul Kravchenko"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
pydantic-extra-types = "^2.7.0"
phonenumbers = "^8.13.36"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
fastapi-mail = "^1.4.1"
redis = "^5.0.4"
pydantic-settings = "^2.2.1"
fastapi-limiter = "^0.1.6"
aioredis = "^2.0.1"
redis-lru = "^0.1.2"
asyncpg = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
